syntax = "proto3";
option csharp_namespace = "Itmo.Dev.Asap.Core.Models";

import "models/user.proto";
import "google/protobuf/wrappers.proto";

message Student {
  User user = 1;
  google.protobuf.StringValue group_id = 2;
  string group_name = 3;
  google.protobuf.Int32Value university_id = 4;
}