syntax = "proto3";
option csharp_namespace = "Itmo.Dev.Asap.Core.SubjectCourseGroups";

import "google/protobuf/empty.proto";
import "models/subject_course_group.proto";

service SubjectCourseGroupService {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty);
  rpc Query(QueryRequest) returns (QueryResponse);
}

message CreateRequest {
  string subject_course_id = 1;
  repeated string student_group_ids = 2;
}

message CreateResponse {
  repeated SubjectCourseGroup subject_course_groups = 1;
}

message DeleteRequest {
  string subject_course_id = 1;
  string student_group_id = 2;
}

message QueryRequest {
  string subject_course_id = 1;
  repeated string ids = 2;
  repeated string names = 3;
}

message QueryResponse {
  repeated SubjectCourseGroup subject_course_groups = 1;
}